--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,15 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#PayPal Setting & API Credentials - sandbox
+PAYPAL_SANDBOX_API_USERNAME=sb-eml5v6441825@business.example.com
+PAYPAL_SANDBOX_API_PASSWORD=
+PAYPAL_SANDBOX_API_SECRET=EBVOTvkV9a9fnCrVco0Dema1tC_Be3zqyfMUAXyv8n8b2yu7m6M-oP0dUQQSZGqDtLvY6iJ1jOUAEryy
+PAYPAL_SANDBOX_API_CERTIFICATE=
+
+#PayPal Setting & API Credentials - live
+PAYPAL_LIVE_API_USERNAME=
+PAYPAL_LIVE_API_PASSWORD=
+PAYPAL_LIVE_API_SECRET=
+PAYPAL_LIVE_API_CERTIFICATE=
