--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "laraveles/spanish": "^1.5"
+        "laraveles/spanish": "^1.5",
+        "paypal/rest-api-sdk-php": "^1.14",
+        "srmklive/paypal": "~1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
